# 99-Haskell-Problems

./: .gitignore  99-haskell-problems.cabal  99haskellproblems.cabal  LICENSE  README.md  watchr_script
src/: Main.hs  Problems11_20.hs  Problems1_10.hs  Problems21_30.hs  Test.hs
test/: Test.hs
