name:           99haskellproblems
version:        0.1
cabal-version:  >= 1.9.2
author:         Nathan Dotz
copyright:      2011 Nathan Dotz
license:        BSD
homepage:       http://sleepynate.com
synopsis:       99 Haskell Problems
description:    
                Just some work on the 99 Lisp Problems as translated to haskell.
                .
                More Info:
                http://haskell.org/haskellwiki/H-99:_Ninety-Nine_Haskell_Problems
build-type:     Custom

executable 99-haskell-problems
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base

Test-Suite test-foo
    type:       exitcode-stdio-1.0
    hs-source-dirs:  src
    main-is:    Test.hs
    build-depends: base, HUnit, random, transformers
